<resources>
    <string name="app_name">YA!TA!</string>
    <string name="title_activity_tab">YA!TA!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Main page</string>
    <string name="Departure_prompt">Departure</string>
    <string name="Time_prompt">Time</string>
    <string name="Destination_prompt">Destination</string>
    <string name="MON_prompt">MON</string>
    <string name="TUE_prompt">TUE</string>
    <string name="WED_prompt">WED</string>
    <string name="THU_prompt">THU</string>
    <string name="FRI_prompt">FRI</string>
</resources>