<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/MON"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:prompt="@string/MON_prompt"
        android:layout_marginTop="20dp"
        />

    <Spinner
        android:id="@+id/TUE"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_below="@id/MON"
        android:layout_centerHorizontal="true"
        android:prompt="@string/TUE_prompt"
        android:layout_marginTop="10dp"
        />

    <Spinner
        android:id="@+id/WED"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_below="@id/TUE"
        android:layout_centerHorizontal="true"
        android:prompt="@string/WED_prompt"
        android:layout_marginTop="10dp"
        />

    <Spinner
        android:id="@+id/THU"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_below="@id/WED"
        android:layout_centerHorizontal="true"
        android:prompt="@string/THU_prompt"
        android:layout_marginTop="10dp"
        />

    <Spinner
        android:id="@+id/FRI"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_below="@id/THU"
        android:layout_centerHorizontal="true"
        android:prompt="@string/FRI_prompt"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClick3"
        android:text="SAVE"
        android:layout_below="@+id/FRI"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>