<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kimsohee.myapplication.MapsActivity">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:prompt="@string/Departure_prompt"
        android:layout_below="@+id/text"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:prompt="@string/Time_prompt"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true"
        android:prompt="@string/Destination_prompt"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="Choose your departure, time and destination."
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="CREATE"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kimsohee.myapplication.MapsActivity"
        android:layout_below="@+id/spinner3"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>